	be linked to a front-end via 'R CMD config --ldflags'.
	The tests/Embedding examples now work with a static R
	library.

    o	Netscape (which was discontinued in Feb 2008) is no longer
	considered when selecting a browser.

    o	xdg-open (the freedesktop.org interface to
	kfmclient/gnome-open/...)  is onsidered as a possible browser,
	after real browsers such as firefox, mozilla and opera.


UTILITIES

    o	Rdconv now removes empty sections including alias and keyword
    	entries, with a note.

    o	Keyword entries are no longer mandatory in Rd files.

    o	R CMD INSTALL now also installs tangled versions of all vignettes.

    o	R CMD check now warns if spaces or non-ASCII characters are
	used in file paths, since these are not in general portable.

    o	R CMD check (via massage-examples.pl) now checks all examples
	with a 7 inch square device region on A4 paper, for
	locale-independence and to be similar to viewing examples on
	an on-screen device.

	If a package declares an encoding in the DESCRIPTION file,
	the examples are assumed to be in that encoding when running
	the tests. (This avoids errors in running latin1 examples in a
	UTF-8 locale.)

    o	R CMD check uses pdflatex (if available) to check the typeset
	version of the manual, producing PDF rather than DVI.  (This
	is a better check since the package reference manuals on CRAN
	are in PDF.)

    o	R CMD Rd2dvi gains a --encoding argument to be passed to
	R CMD Rdconv, to set the default encoding for conversions.
	If this is not supplied and the files are package sources and
	the DESCRIPTION file contains an Encoding field, that is used
	for the default encoding.


C-LEVEL FACILITIES

    o	Both the Unix and Windows interfaces for embedding now make
	use of 'const char *' declarations where appropriate.

    o	Graphics devices can now select to be sent text in UTF-8, even
	if the current locale is not UTF-8 (and so enable text entered